{{$NEXT}}

0.001077  2019-06-06 15:04:32-07:00 America/Los_Angeles

    - Add --retry options (toddr)
    - Make sure all events are flushed if there is a sync issue
    - Added some tests

0.001076  2019-05-20 14:54:50-07:00 America/Los_Angeles

    - Fix TAP parsers nesting parsing
    - Dix comment groupign when parsing TAP

0.001075  2019-05-18 18:33:52-07:00 America/Los_Angeles

    - Fix Stream+IPC issues

0.001074  2019-05-07 12:04:51-07:00 America/Los_Angeles

    - Add support for table structures

0.001073  2019-04-10 08:21:04-07:00 America/Los_Angeles

    - Add support for disabled progress indicators to QVF mode

0.001072  2019-04-08 10:27:50-07:00 America/Los_Angeles

    - Add option to turn off progress indicators

0.001071  2018-12-13 09:43:38-08:00 America/Los_Angeles

    - Add --notify-text CLI option
    - Fix exit code parsing and reporting

0.001070  2018-10-24 13:19:53-07:00 America/Los_Angeles

    - Allow --author-testing in 'projects' command
    - Misc minor changes

0.001069  2018-08-23 13:48:54-07:00 America/Los_Angeles

    - Fix busy-spin in job reaper
    - Allow --no-fork and --no-preload simultaneously

0.001068  2018-07-27 09:12:45-07:00 America/Los_Angeles

    - Fix more encoding/utf8 bugs
    - Fix missing dep on sufficient List::Utils version

0.001067  2018-07-18 07:42:06-07:00 America/Los_Angeles

    - Add ability to congiure a custom log file format

0.001066  2018-07-12 08:06:46-07:00 America/Los_Angeles

    - Fix issue where isolation jobs were being kicked off too early. It needs to wait for all non-isolation jobs to finish first.
    - New Feature: # HARNESS-CONFLICTS-XXX
    - New documentation for HARNESS-CATEGORY-IMMISCIBLE
    - New documentation for HARNESS-TIMEOUT-EVENT
    - Get rid of the use of each when walking a hash.
    - Allow comment only lines prior to HARNESS-XXX directives
    - Accept binary TAP output that is not correctly formatted to UTF8