@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Document yath log format
+
 0.001077  2019-06-06 15:04:32-07:00 America/Los_Angeles
 
     - Add --retry options (toddr)
